--- a/lambda-auth/package.json
+++ b/lambda-auth/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "passport": "^0.4.1",
     "passport-saml": "^3.1.1",
-    "serverless-http": "^2.7.0"
+    "serverless-http": "^2.7.0",
+    "xml": "^1.0.1"
   }
 }
