--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "react-hook-form": "^7.14.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-table": "^7.7.0",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
