--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@material-ui/styles": "^4.11.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,8 +16,6 @@
     "react-hook-form": "^7.14.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "react-table": "^7.7.0",
-    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
