--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.4",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/styles": "^4.11.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.13",
     "aws-sdk": "^2.980.0",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "fs": "^0.0.1-security",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.14.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
